# pdf-validator

./: .coveragerc  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  conftest.py  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  theisis.txt
accounts/: admin.py  apps.py  filters.py  forms.py  models.py  permissions.py  serializers.py  services.py  signals.py  tokens.py  urls.py  views.py
accounts/api/: urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_signeruser_profile_image.py  0004_signeruser_rejected.py  0005_alter_customuser_email.py
accounts/services/: pbs_extractor_service.py  pbs_validation_service.py
accounts/templates/accounts/: account_activation_email.html  login.html  signer.html  signer_detail.html  signer_list.html  signup.html
accounts/tests/: conftest.py  factories.py  test_signals.py  test_views.py
signature_validator/: admin.py  apps.py  forms.py  helpers.py  models.py  serializers.py  urls.py  views.py
signature_validator/api/: urls.py  views.py
signature_validator/migrations/: 0001_initial.py  0002_pdfdocumentvalidator_all_signers_verified_and_more.py  0003_add_signer_user_as_fk_to_signature_validator.py
signature_validator/services/: email_service.py  pdf_validation_service.py
signature_validator/tests/: conftest.py  test_views.py
static/css/: footer.css  style.css
templates/: base.html
templates/base/: css.html  footer.html  js.html  messages.html  navbar.html  paginator.html
tests/files/: CertExchangechanukachathuranga.cer  CertExchangechanukachathuranga.fdf  CertExchangechanukachathuranga.p7c  kavinduLakith.cer
validator/: asgi.py  configs.py  logger.py  settings.py  urls.py  wsgi.py
(+6 files in other folders)
